<?xml version="1.0" encoding="utf-8"?>
<!-- 浏览页 AppBar 溢出菜单（P1 通用菜单资源） -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_toggle_view"
        android:icon="@drawable/ic_grid"
        android:title="@string/action_toggle_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_filter_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_select_all"
        android:title="@string/action_select_all"
        app:showAsAction="never" />
</menu>
